Fix color contrast in headers and footers (accessibility)
Remove the light background in the footer rather than darken
the link text, in order to keep link color the same as other
links.  Slightly darken the blue background in the header
as recommended by the HTML_CodeSniffer tool, and use the
recommended shade of blue.

Issue #514

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -35,7 +35,7 @@ input,select,textarea{
   width:85px;
 }
 #header {
-  background: #0d4478;
+  background: #033a6e;
   border-bottom: 2px solid #d5e2e5;
   height: 33px;
   line-height: 33px;
@@ -804,7 +804,6 @@ input.date{
 }
 #footer{
   height:40px;
-  background:#faf9f9;
   line-height:40px;
   font-size:12px;
   color:#000;
